--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -71,4 +71,46 @@
     "memory": "16gb",
     "cpus": "4"
   }
-}
+}{
+    "defaultDomain": "domain.pddl",
+    "defaultProblem": "problem_template.pddl",
+    "defaultOptions": "",
+    "cases": [
+        {
+            "label": "Case #1",
+            "preProcess": {
+                "kind": "nunjucks",
+                "data": "case1_data.json"
+            }
+        },
+        {
+            "label": "Case #1.1",
+            "preProcess": {
+                "kind": "jinja2",
+                "data": "case1_data.json"
+            }
+        },
+        {
+            "label": "Case #2",
+            "preProcess": {
+                "kind": "command",
+                "command": "myprogram.exe",
+                "args": [
+                    "case2_data.json",
+                    "some_switch",
+                    42
+                ]
+            }
+        },
+        {
+            "label": "Case #3",
+            "preProcess": {
+                "kind": "python",
+                "script": "../scripts/populate_template.py",
+                "args": [
+                    "case3_data.json"
+                ]
+            }
+        }
+    ]"ghcr.io/dotnet/aspire-devcontainer-feature/dotnetaspire:1": {Locked 
+)
